Add user fixture

--- a/test/fixtures/solves.yml
+++ b/test/fixtures/solves.yml
@@ -5,7 +5,7 @@ one:
   problem: one
   user: one
 
-two:
-  tile: MyString
-  problem: two
-  user: two
+#two:
+#  tile: MyString
+#  problem: two
+#  user: two
