--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,24 +3,41 @@ name: CI
 on: pull_request
 
 jobs:
-  lint:
+#  lint:
+#    runs-on: ubuntu-latest
+#    permissions:
+#      checks: write
+#      contents: write
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Install Ruby and gems
+#        uses: ruby/setup-ruby@v1
+#        with:
+#          bundler-cache: true
+#      - name: Generate binstubs
+#        run: bundle binstubs bundler-audit brakeman
+#      - name: Security audit dependencies
+#        run: bin/bundler-audit --update
+#      - name: Security audit application code
+#        run: bin/brakeman -q -w2
+#      - name: Standard Ruby
+#        uses: standardrb/standard-ruby-action@v1
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      checks: write
-      contents: write
-
+    env:
+      RAILS_ENV: test
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Ruby and gems
+        uses: actions/checkout@v4
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - name: Generate binstubs
-        run: bundle binstubs bundler-audit brakeman
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Standard Ruby
-        uses: standardrb/standard-ruby-action@v1
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@v1
+        with:
+          install-dependencies: true
+      - name: Run tests
+        run: bin/rails test:all
