--- a/test/fixtures/solves.yml
+++ b/test/fixtures/solves.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  tile: MyString
+  tile: 7m
   problem: one
   user: one
 
