Test the action again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Standard Ruby
-        uses: packagespace/standard-ruby-action@v1.0.2
+        uses: packagespace/standard-ruby-action@main
   test:
     needs: lint
     runs-on: ubuntu-latest
