--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           install-dependencies: true
       - name: Run tests
-        run: bin/rails test:all
+        run: bin/rails test
       - name: Upload screenshots
         uses: actions/upload-artifact@v4
         if: failure()
