--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Standard Ruby
-        uses: standardrb/standard-ruby-action@v1
+        uses: packagespace/standard-ruby-action@main
   test:
     needs: lint
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
         with:
           install-dependencies: true
       - name: Run tests
-        run: bin/rails test:all
+        run: bin/rails test
       - name: Upload screenshots
         uses: actions/upload-artifact@v4
         if: failure()
