--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,6 @@ on: pull_request
 jobs:
   lint:
     runs-on: ubuntu-latest
-    permissions:
-      checks: write
-      contents: write
 
     steps:
       - name: Checkout code
@@ -23,7 +20,9 @@ jobs:
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Standard Ruby
-        uses: packagespace/standard-ruby-action@main
+        uses: standardrb/standard-ruby-action@v1
+        with:
+          autofix: false
   test:
     needs: lint
     runs-on: ubuntu-latest
