--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: wwyd
 
 # Name of the container image.
-image: your-user/wwyd
+image: packagespace/wwyd
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 135.181.47.216
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +19,13 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: wwyd.packagespace.xyz
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: packagespace
 
   # Always use an access token rather than real password when possible.
   password:
@@ -76,6 +76,10 @@ asset_path: /rails/public/assets
 # Configure the image builder.
 builder:
   arch: amd64
+  cache:
+    type: gha
+    options: mode=max
+    image: kamal-app-build-cache
 
   # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
   # remote: ssh://docker@docker-builder-server
