--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install yarn packages
+        run: yarn install
+
       - name: Cache Playwright Chromium browser
         id: playwright-cache
         uses: actions/cache@v4
